--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@node-wot/binding-http": "^0.8.16",
+    "@node-wot/core": "^0.8.16",
     "axios": "^1.7.9",
     "express": "^4.21.2",
     "slugify": "^1.6.6",
